# RefVision

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  aws_cost_cleanup.py  bedrock-anthropic-policy.json  cdk.json  config.py  config.yaml  convert_video_format.sh  docker-compose.yml  entrypoint.sh  file_tree.py  flask_app.py  mypy.ini  presentation.md  project_plan.md  project_structure.txt  pyproject.toml  ref_vision_infrastructure_stack.py  run_inference.sh  run_pipeline.py  unified_app.py  upload_to_s3.sh
Diagrams/: RefVision.drawio
config/: config.py  config.yaml
docs/: .$RefVision Flow Diagram.drawio.bkp  RefVision Flow Diagram.drawio  presentation.md  presentation_slides.md  project_plan.md
functions/cleanup/: handler.py
functions/error_handler/: handler.py
functions/preprocessing/: handler.py
labelbox_dataset_creation/: ontology.json
metadata/: lifter_metadata.json
presentation/: presentation_slides_final.html  presentation_slides_final.md
presentation/RefVision Video Player_files/: style.css
ref_vision_infrastructure/: ref_vision_infrastructure_stack.py
refvision/: apl_rules.py  find_critical_frame.py  lambda_handler.py
refvision/analysis/: depth_checker.py  find_turnaround_frame.py  lifter_selector.py  turnaround_detector.py
refvision/cleanup/: aws_cost_cleanup.py  handler.py
refvision/common/: config.py  config.yaml  config_base.py  config_cloud.py  config_local.py
refvision/detection/: lifter_selector.py
refvision/dynamo_db/: dynamodb_helpers.py  handler.py
refvision/dynamodb/: db_handler.py
refvision/error_handler/: handler.py
refvision/explanation/: explanation_generator.py  prompt_template.txt
refvision/inference/: depth_evaluator.py  inference.py  inference.txt  inference_trigger.py  lifter_selector.py  local_inference.py  model_deployment.py  model_loader.py  serve.py  video_processor.py
refvision/ingestion/: handler.py  kinesis_ingest.py  lifter_data_ingestor.py  preprocessing.py  simulate_ingestion.py  simulate_kvs.py  video_ingestor.py
refvision/io/: s3_client.py  s3_download.py  s3_upload.py
refvision/log_forwarder/: log_forwarder.py
refvision/model/: model_compile.py
refvision/orchestration/: orchestrator.py  (+1 more)
resources/: labelling & annotation instructions.md  rules.md
scripts/: deploy_sagemaker.sh  deploy_web_app.sh  model_compile.sh  run_local_tests.sh  run_pipeline.py  update_pytorch.sh
src/: apl_rules.py  check_squat_depth.py  find_critical_frame.py  main.py
templates/: login.html  video.html
tests/: conftest.py  test_check_squat_depth.py  test_config.py  test_depth_checker.py  test_depth_evaluator.py  test_dynamodb_helpers.py  test_error_handler.py  test_explanation_generator.py  test_find_critical_frame.py  test_find_turnaround_frame.py  test_inference_trigger.py  test_infra_advanced.py  test_infra_validation.py  test_lambda_handler.py  test_lifter_selector.py  test_local_inference.py  test_log_forwarder.py  test_model_loader.py  test_pipeline.py  test_run_pipeline.py  test_series_utils.py  test_video_ingestor.py  test_video_processor.py  test_video_upload.py  tests_turnaround_detector.py
(+22 files in other folders)
